// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<DocumentFragment>
  <div
    aria-label="cart.discount: foo"
    class="ui-shared__discount-badge"
    data-test-id="foo"
    tabindex="-1"
  >
    foo
  </div>
</DocumentFragment>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<DocumentFragment>
  <div
    aria-label="cart.discount: SAVE {0}%"
    class="ui-shared__discount-badge"
    data-test-id="SAVE {0}%"
    tabindex="-1"
  >
    SAVE {0}%
  </div>
</DocumentFragment>
`;
